# quantumchat

./: .gitignore  Cargo.toml  README.md
assets/fonts/: README.md
migrations/: 0001_create.sql
scripts/: reset.ps1
src/: events.rs  icons.rs  init.rs  main.rs  state.rs
src/core/: mod.rs
src/logic/: mod.rs
src/storage/: config.rs  contact.rs  message.rs  mod.rs
src/stylesheet/: color.rs  styles.rs  widgets.rs
src/view/: chat.rs  chat_buffer.rs  components.rs  mod.rs  rich_text.rs
src/view/chat/: mod.rs  msg.rs
src/view/chat_buffer/: db_load.rs  mod.rs
