[package]
name = "quantumchat"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", default-features = false, features = [
    "tokio",
    # "image",
    # "svg",
    # "lazy",
    # "advanced",
    "qr_code",
    "wgpu",
    "tiny-skia"
] }
serde = { version = "1", features = ["derive"] }
tokio = "1"

whatsapp-rust = "0.2"
sled = "0.34"
dirs = "6"
serde_json = "1.0.148"

[profile.dev.package."*"]
opt-level = 3
debug = false
